# PyOrganoIDNet

./: .gitignore  CITATION.cff  Compare_StarDist_CellPose.ipynb  README.md  image_metrics.csv  main.py  patch_inference.py  pyproject.toml  requirements.txt  streamlit_app.py
Cellpose/: CellposePrediction.ipynb  CellposeTraining.py  Cellpose_Prediction.ipynb
DataSetPreparation/: PrepareDataset.py  PrepareDatasetModules.py
Prediction_Images/: 1.tif  11.tif  12.tif  2.tif
Raw_Data/: Prepare_Dataset.ipynb  Prepare_Dataset_Modules.py
Raw_Data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Source_Codes/.ipynb_checkpoints/: Compare_StarDist_CellPose-checkpoint.ipynb
Source_Codes/Cellpose/: Cellpose_Training.py
Source_Codes/Compare_Methods/: Compare_StarDist_CellPose.ipynb  image_metrics.csv
Source_Codes/StarDist/: StarDist_Prediction.ipynb  StarDist_Training.py
Source_Codes/cellseg_models_pytorch/: evaluate.py  predict.py  prepare_data.py  train.py
StarDist/: StarDistPrediction.ipynb  StarDistTraining.py
models/: best.pt  last.pt
