[project]
name = "pyorganoidnet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12, <3.14"
dependencies = [
    "albumentations>=2.0.8",
    "cellseg-models-pytorch>=0.1.30",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "scikit-image",
    "scipy",
    "seaborn",
    "streamlit",
    "tqdm",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.21",
]
